update to shepherd 2.5.0-beta.1, support for recording mode! update README to add recording mode info

--- a/config.yaml
+++ b/config.yaml
@@ -7,8 +7,12 @@ proxy:
   enable_wombat: true
 
   ca_name: pywb OWT CA
-  #ca_file_cache: ./proxy-certs/pywb-ca.pem
 
-#collections:
-#  live: $live
+# enable for recording
+# below can be commented out if not recording
+recorder: live
 
+collections:
+  live: $live
+
+autoindex: 30
